# rsomics-bed-nuc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: basic.tsv  ref.fa  ref.fa.fai  regions.bed  strand.bed  strand_aware.tsv  with_pattern.tsv  with_pattern_ci.tsv  with_seq.tsv
